adding more tools

--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -1,7 +1,7 @@
 # theme = "monokai_aqua"
-theme = "tokyonight"
+# theme = "tokyonight"
 # theme = "dark_plus_oscar"
-# theme = "pop-dark_oscar"
+theme = "pop-dark_oscar"
 
 [editor]
 mouse = true
