adding more changes

--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -172,7 +172,8 @@ language-servers = ["ctags-lsp"]
 
 [[language]]
 name = "python"
-language-servers = ["scls", "pylsp", "llm-lsp"]
+language-servers = ["ruff", "jedi", "llm-lsp"]
+
 
 
 ##############################
